--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ tiktoken                  0.7.0                    pypi_0    pypi
 timm                      0.6.12                   pypi_0    pypi
 torch                     2.3.1                    pypi_0    pypi
 torchvision               0.18.1                   pypi_0    pypi
+clip                      1.0                      pypi_0    pypi
+tqdm                      4.61.2                   pypi_0    pypi
+numpy                     1.22.4                   pypi_0    pypi
+pandas                    2.0.3            py38h1128e8f_0    defaults
