--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-opencv-python             4.9.0.80                 pypi_0    pypi
-tiktoken                  0.7.0                    pypi_0    pypi
-timm                      0.6.12                   pypi_0    pypi
-torch                     2.3.1                    pypi_0    pypi
-torchvision               0.18.1                   pypi_0    pypi
-clip                      1.0                      pypi_0    pypi
-tqdm                      4.61.2                   pypi_0    pypi
-numpy                     1.22.4                   pypi_0    pypi
-pandas                    2.0.3            py38h1128e8f_0    defaults
+opencv-python==4.9.0.80
+tiktoken==0.7.0
+timm==0.6.12
+torch==2.3.1
+torchvision==0.18.1
+clip==1.0
+tqdm==4.61.2
+numpy==1.22.4
+pandas==2.0.3
